--- a/index.html
+++ b/index.html
@@ -1,14 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNIQLO e-Commerce</title>
-    <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
-    
-</body>
+    <!-- CSS Style link -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- Google Font Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstarp link-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <!-- font awesome cdn  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <!------------------------------
+    --------Hero area start-------->
+    <div>
+      <header>
+        <nav>
+          <div class="row justify-content-between align-items-center">
+            <div class="col-6 col-lg-3">
+              <a href="/"><img src="/images/uniqlo-logo.webp" alt="" /></a>
+            </div>
+            <div class="col-lg-6 d-none d-lg-block">
+              <ul class="nav-link">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Shop</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Blog</a></li>
+                <li><a href="/">Contact</a></li>
+              </ul>
+            </div>
+            <div
+              class="col-6 col-lg-3 d-flex justify-content-end align-items-center flex-wrap nav_icon_box"
+            >
+              <i class="icon fa-solid fa-user"></i>
+              <i class="icon fa-solid fa-cart-shopping"></i>
+              <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
+                <ul class="toggle-nav d-none">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/">Shop</a></li>
+                  <li><a href="/">About</a></li>
+                  <li><a href="/">Blog</a></li>
+                  <li><a href="/">Contact</a></li>
+              </ul>
+              </i>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <!-- slider area -->
+      <div class="slide">
+        <!-- for mobile -->
+        <div
+          id="carouselExampleAutoplaying"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="/images/silder-1.png"
+                class="d-block w-100"
+                alt="slider"
+              />
+              <div class="carousel-caption slide-1">
+                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <a class="carousel-link" href="/">SHOP NOW</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/images/slider-2.png"
+                class="d-block w-100"
+                alt="slider"
+              />
+              <div class="carousel-caption slide-2">
+                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <a class="carousel-link" href="/">SHOP NOW</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/images/slider-3.png"
+                class="d-block w-100"
+                alt="slider"
+              />
+              <div class="carousel-caption slide-3">
+                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <a class="carousel-link" href="/">SHOP NOW</a>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev"
+          >
+            <span aria-hidden="true"
+              ><i class="fa-solid fa-chevron-left"></i
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next"
+          >
+            <span aria-hidden="true"
+              ><i class="fa-solid fa-chevron-right"></i
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <!-- for ipad , laptop, desktop -->
+        <!-- <div
+          id="carouselExampleAutoplaying"
+          class="d-none d-md-block carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="slider-1 carousel-item active"></div>
+            <div class="slider-2 carousel-item"></div>
+            <div class="slider-3 carousel-item"></div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev"
+          >
+            <span aria-hidden="true">
+              <i class="fa-solid fa-chevron-left"></i>
+            </span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next"
+          >
+            <span aria-hidden="true">
+              <i class="fa-solid fa-chevron-right"></i>
+            </span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div> -->
+      </div>
+    </div>
+    <!------------------------------
+    --------Hero area end---------->
+
+    <!-- javascript  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
