feature section design

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <!------------------------------
     --------Hero area start-------->
-    <div>
+    <section>
       <header>
         <nav>
           <div class="row justify-content-between align-items-center">
@@ -61,7 +61,7 @@
                   <li><a href="/">About</a></li>
                   <li><a href="/">Blog</a></li>
                   <li><a href="/">Contact</a></li>
-              </ul>
+                </ul>
               </i>
             </div>
           </div>
@@ -84,7 +84,9 @@
                 alt="slider"
               />
               <div class="carousel-caption slide-1">
-                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <h5 class="slider-heading">
+                  New Product <span>Collection</span>
+                </h5>
                 <a class="carousel-link" href="/">SHOP NOW</a>
               </div>
             </div>
@@ -95,7 +97,9 @@
                 alt="slider"
               />
               <div class="carousel-caption slide-2">
-                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <h5 class="slider-heading">
+                  New Product <span>Collection</span>
+                </h5>
                 <a class="carousel-link" href="/">SHOP NOW</a>
               </div>
             </div>
@@ -106,7 +110,9 @@
                 alt="slider"
               />
               <div class="carousel-caption slide-3">
-                <h5 class="slider-heading">New Product <span>Collection</span></h5>
+                <h5 class="slider-heading">
+                  New Product <span>Collection</span>
+                </h5>
                 <a class="carousel-link" href="/">SHOP NOW</a>
               </div>
             </div>
@@ -170,9 +176,103 @@
           </button>
         </div> -->
       </div>
-    </div>
+    </section>
     <!------------------------------
     --------Hero area end---------->
+
+    <!------------------------------
+    -----features area start------->
+    <section class="features-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 banner">
+            <div class="thumb">
+              <a href="/">
+                <img
+                  class="img-fluid"
+                  src="/images/feature-1.webp"
+                  alt="feature-1"
+                />
+              </a>
+            </div>
+            <div class="content">
+              <h6>30% Off</h6>
+              <h3>New Collection</h3>
+              <a href="/">Shop Now</a>
+            </div>
+          </div>
+          <div class="col-md-6 banner xmt-40">
+            <div class="thumb">
+              <a href="/">
+                <img
+                  class="img-fluid"
+                  src="/images/feature-2.webp"
+                  alt="feature-1"
+                />
+              </a>
+            </div>
+            <div class="content">
+              <h6>40% Off</h6>
+              <h3>New Furniture</h3>
+              <a href="/">Shop Now</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row d-none d-md-flex second-row">
+          <div class="col-md-4 md-banner">
+            <div class="thumb">
+              <a href="/">
+                <img
+                  class="img-fluid"
+                  src="/images/feature-3.webp"
+                  alt="feature-1"
+                />
+              </a>
+            </div>
+            <div class="md-content">
+              <h6>40% Off</h6>
+              <h3>New Furniture</h3>
+              <a href="/">Shop Now</a>
+            </div>
+          </div>
+          <div class="col-md-4 md-banner">
+            <div class="thumb">
+              <a href="/">
+                <img
+                  class="img-fluid"
+                  src="/images/feature-4.webp"
+                  alt="feature-1"
+                />
+              </a>
+            </div>
+            <div class="md-content">
+              <h6>40% Off</h6>
+              <h3>New Furniture</h3>
+              <a href="/">Shop Now</a>
+            </div>
+          </div>
+          <div class="col-md-4 md-banner">
+            <div class="thumb">
+              <a href="/">
+                <img
+                  class="img-fluid"
+                  src="/images/feature-3.webp"
+                  alt="feature-1"
+                />
+              </a>
+            </div>
+            <div class="md-content">
+              <h6>40% Off</h6>
+              <h3>New Furniture</h3>
+              <a href="/">Shop Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------------------------------
+    ------features area end-------->
 
     <!-- javascript  -->
     <script
