--- a/index.html
+++ b/index.html
@@ -280,20 +280,46 @@
     <section class="product-container">
       <div>
         <div class="btn-box" id="myBtnContainer">
-          <button class="Btn filter-option active" data-filter="all" onclick=filterProduct(event)>
+          <button
+            class="Btn filter-option active"
+            data-filter="all"
+            onclick="filterProduct(event)"
+          >
             All
           </button>
-          <button class="Btn filter-option" data-filter="furniture" onclick=filterProduct(event)>Furniture</button>
-          <button class="Btn filter-option" data-filter="bag" onclick=filterProduct(event)>
-            Bag
+          <button
+            class="Btn filter-option"
+            data-filter="furniture"
+            onclick="filterProduct(event)"
+          >
+            Furniture
           </button>
-          <button class="Btn filter-option" data-filter="jewellery" onclick=filterProduct(event)>
+          <button
+            class="Btn filter-option"
+            data-filter="bag"
+            onclick="filterProduct(event)"
+          >
+            Bags
+          </button>
+          <button
+            class="Btn filter-option"
+            data-filter="jewellery"
+            onclick="filterProduct(event)"
+          >
             Jewellery
           </button>
-          <button class="Btn filter-option" data-filter="kitchen" onclick=filterProduct(event)>
+          <button
+            class="Btn filter-option"
+            data-filter="kitchen"
+            onclick="filterProduct(event)"
+          >
             Kitchen Item
           </button>
-          <button class="Btn filter-option" data-filter="electronics" onclick=filterProduct(event)>
+          <button
+            class="Btn filter-option"
+            data-filter="electronics"
+            onclick="filterProduct(event)"
+          >
             Electronics
           </button>
         </div>
@@ -303,7 +329,11 @@
         <div class="row list">
           <div class="card col-12 col-md-4 col-lg-3 electronics">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-1.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-1.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -316,7 +346,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-19.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-19.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -327,9 +361,13 @@
               </ul>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3  kitchen">
+          <div class="card col-12 col-md-4 col-lg-3 kitchen">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-11.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-11.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -342,7 +380,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 electronics">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-5.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-5.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -355,7 +397,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-22.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-22.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -368,7 +414,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-40.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-40.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -381,7 +431,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-20.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-20.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -394,7 +448,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 electronics">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-10.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-10.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -407,11 +465,15 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-31.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-31.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Modern Leisure Outdoor </h5>
+              <h5>Modern Leisure Outdoor</h5>
               <ul>
                 <li class="old-price">$160.00</li>
                 <li class="new-price">$120.00</li>
@@ -420,7 +482,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-39.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-39.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -433,11 +499,15 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 kitchen">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-16.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-16.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Pink Tea Kettles </h5>
+              <h5>Pink Tea Kettles</h5>
               <ul>
                 <li class="old-price">$16.00</li>
                 <li class="new-price">$12.00</li>
@@ -446,7 +516,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-42.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-42.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -459,7 +533,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-25.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-25.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -472,7 +550,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 bag">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-9.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-9.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -485,11 +567,15 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 bag">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-8.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-8.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Bamboo Cane </h5>
+              <h5>Bamboo Cane</h5>
               <ul>
                 <li class="old-price">$16.00</li>
                 <li class="new-price">$12.00</li>
@@ -498,7 +584,11 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img class="card-img-top" src="/images/product-37.webp" alt="product">
+              <img
+                class="card-img-top"
+                src="/images/product-37.webp"
+                alt="product"
+              />
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
@@ -515,6 +605,56 @@
 
     <!------------------------------
     ------products area end-------->
+
+    <!------------------------------
+    ------footer area start-------->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="f-box-1 col-md-6 col-lg-3">
+            <img src="/images/uniqlo-logo.webp" alt="logo" />
+            <p>
+              Get 10% discount with notified about the latest news and updates.
+            </p>
+          </div>
+          <div class="f-box-2 col-md-6 col-lg-3">
+            <h1>Newsletter</h1>
+            <div class="subscribe">
+              <input type="text" />
+             <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="f-box-3 col-md-6 col-lg-3">
+            <h1>Contact Us</h1>
+            <span
+              >319 Clematis St. <br />
+              Suite 100 WPB, FL 33401</span>
+          </div>
+          <div class="f-box-3 col-md-6 col-lg-3">
+            <h1>Follow</h1>
+            <div class="footer-icon-box">
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class=" row">
+          <div class="cpoyright col-12 col-md-6">
+            <p>© 2023 Uniqlo. Made with by <a href="https://tanvir-s-portfolio.netlify.app/" target="_blank">Developer Tanvir.</a></p>
+          </div>
+          <div class="footer-link col-12 col-md-6">
+              <a href="/">Home</a>
+              <a href="/">Product</a>
+              <a href="/">Contact </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!------------------------------
+    -------footer area end--------->
 
     <!-- javascript  -->
     <script
