--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <ul class="nav-link">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Shop</a></li>
-                <li><a href="/">About</a></li>
+                <li><a href="/About.html">About</a></li>
                 <li><a href="/">Blog</a></li>
                 <li><a href="/">Contact</a></li>
               </ul>
@@ -59,7 +59,7 @@
                 <ul class="toggle-nav d-none">
                   <li><a href="/">Home</a></li>
                   <li><a href="/">Shop</a></li>
-                  <li><a href="/">About</a></li>
+                  <li><a href="/About.html">About</a></li>
                   <li><a href="/">Blog</a></li>
                   <li><a href="/">Contact</a></li>
                 </ul>
