video section design

--- a/About.html
+++ b/About.html
@@ -118,7 +118,8 @@
                     <img class="img-fluid" src="/images/video-bg.webp" alt="">
                     <i class="fa-solid fa-play"></i>
                 </div>
-            </div>
+              </div>
+          
             <div class="col-12 col-lg-6">
                 <div class="p-4 p-lg-0">
                     <h2 class="info-heading">Why Choose Us?</h2>
@@ -167,6 +168,14 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="video-section">
+      <div class="video-box">
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/lP86g51V91Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
     </section>
     <!------------------------------
     ---------info area end--------->
