--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css">
     <!-- Google Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
