brand section add

--- a/About.html
+++ b/About.html
@@ -7,8 +7,8 @@
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <!-- Google Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -371,6 +371,36 @@
     </section>
     <!------------------------------
     -------review area end -------->
+
+    <!------------------------------
+    --------brand area start------->
+    <section class="container">
+      <div class="brand">
+        <div>
+          <img src="/images/brand-1.webp" alt="" />
+        </div>
+        <div>
+          <img
+          src="/images/brand-2.webp"
+          alt=""
+        />
+        </div>
+        <div>
+          <img src="images/brand-3.webp" alt="" />
+        </div>
+        <div>
+          <img
+          src="/images/brand-4.webp"
+          alt=""
+        />
+        </div>
+        <div>
+          <img src="images/brand-5.webp" alt="" />
+        </div>
+      </div>
+    </section>
+    <!------------------------------
+    --------brand area end -------->
 
     <!------------------------------
     ------footer area start-------->
