--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <!-- CSS Style link -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="blog.css" />
     <!-- Google Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,15 +76,15 @@
 
     <!------------------------------
     ---contact heading area star--->
-    <section class="contact">
+    <section class="blog">
       <div class="img-div">
         <img src="/images/bg.webp" alt="" />
         <div class="info-div">
-          <h2>Contact Us</h2>
+          <h2>Blog</h2>
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/contact.html">Contact</a>
+            <a href="/blog.html">Blog</a>
           </div>
         </div>
       </div>
@@ -93,84 +93,113 @@
     ----contact heading area end--->
 
     <!------------------------------
-    -----contact info area end----->
-    <section class="contact-info">
+    ----------post area end-------->
+    <section>
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-6">
-            <div class="col-12">
-              <h3>Contact Info</h3>
-              <div>
-                <div>
-                  <div class="info-box">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <div class="details">
-                      <p>Location:</p>
-                      <p>77, seventh avenue, Brat road USA.</p>
-                    </div>
-                  </div>
+        <div>
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-1.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
                 </div>
-                <div class="row">
-                  <div class="col-12 col-md-6 my-3">
-                    <div class="info-box">
-                      <i class="fa-solid fa-mobile-screen-button"></i>
-                      <div class="details">
-                        <p>Phone:</p>
-                        <p>+00 111 222 333 444</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-6 my-3">
-                    <div class="info-box">
-                      <i class="fa-regular fa-envelope"></i>
-                      <div class="details">
-                        <p>E-mail:</p>
-                        <p>youremail@gmail.com</p>
-                      </div>
-                    </div>
-                  </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
                 </div>
               </div>
             </div>
-            <div class="col-12 get-in-touch">
-              <div>
-                <h3>Get in touch</h3>
-                <div class="message-box">
-                  <div class="message-box-one row">
-                    <div class="col-12 col-md-6 spcial-input-left">
-                      <input type="text" class="pb-3" placeholder="Name*" />
-                    </div>
-                    <div class="col-12 col-md-6 spcial-input-right">
-                      <input type="text" class="pb-3" placeholder="Email*" />
-                    </div>
-                  </div>
-                  <div class="message-box-two">
-                    <input type="text" placeholder="Subject*" class="pb-3" />
-                    <br />
-                    <input type="text" class="message" placeholder="Message*" />
-                  </div>
-                  <button class="send-btn">Send</button>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-3.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
+                </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <iframe
-              class="map"
-              width="100%"
-              style="border: 0"
-              loading="lazy"
-              allowfullscreen
-              referrerpolicy="no-referrer-when-downgrade"
-              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
-            >
-            </iframe>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-1.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
+                </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-2.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
+                </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-3.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
+                </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="blog-card m-3">
+                <img class="img-fluid" src="/images/blog-1.webp" alt="" />
+                <div class="date">
+                  <h1>14</h1>
+                  <p>Sep</p>
+                </div>
+                <div class="blog-details">
+                  <p class="author">By: admin | product</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="/"><button>Read More</button></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!------------------------------
-    -----contact info area end----->
+    ----------post area end-------->
 
     <!------------------------------
     ------footer area start-------->
