--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Shop</a></li>
                 <li><a href="/About.html">About</a></li>
-                <li><a href="/">Blog</a></li>
+                <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
@@ -61,7 +61,7 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/">Shop</a></li>
                   <li><a href="/About.html">About</a></li>
-                  <li><a href="/">Blog</a></li>
+                  <li><a href="/blog.html">Blog</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </i>
