--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CSS Style link -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="login-register.css">
     <!-- Google Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,7 +44,7 @@
             </div>
             <div class="col-lg-6 d-none d-lg-block">
               <ul class="nav-link">
-                <li><a href="/">Home</a></li>
+                <li><a href="/login-register.html">Home</a></li>
                 <li><a href="/">Shop</a></li>
                 <li><a href="/About.html">About</a></li>
                 <li><a href="/blog.html">Blog</a></li>
@@ -58,7 +59,7 @@
               <i class="icon fa-solid fa-cart-shopping"></i>
               <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
                 <ul class="toggle-nav d-none">
-                  <li><a href="/">Home</a></li>
+                  <li><a href="/login-register.html">Home</a></li>
                   <li><a href="/">Shop</a></li>
                   <li><a href="/About.html">About</a></li>
                   <li><a href="/blog.html">Blog</a></li>
