--- a/cart.html
+++ b/cart.html
@@ -94,7 +94,7 @@
 
     <!------------------------------
     ----------cart area start------>
-    <section>
+    <section class="cart-section">
       <div class="container">
         <div>
           <div class="cart-data-info">
@@ -182,7 +182,31 @@
                     </div>
               </div>
 
-              <div class="col-12 col-md-6"></div>
+              <div class="col-12 col-md-6">
+                <div class="cart-summery">
+                    <h1>Cart Summery</h1>
+                    <div class="cart-summery-box">
+                        <div class="cart-box d-flex justify-content-between align-items-center">
+                            <p>Subtotal</p>
+                            <p>$290</p>
+                        </div>
+                        <div class="cart-box d-flex justify-content-between align-items-center">
+                            <p>Shipping</p>
+                            <p>$7</p>
+                        </div>
+                        <div class="cart-box d-flex justify-content-between align-items-center">
+                            <p>Vat</p>
+                            <p>$3</p>
+                        </div>
+                        <div class="cart-box total d-flex justify-content-between align-items-center">
+                            <p>Total</p>
+                            <p>$300</p>
+                        </div>
+                        
+                    </div>
+                    <button class="procces-btn">Procces to Checkout</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
