wishlist response design complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="col-lg-6 d-none d-lg-block">
               <ul class="nav-link">
-                <li><a href="/cart.html">Home</a></li>
+                <li><a href="/wishlist.html">Home</a></li>
                 <li><a href="/">Shop</a></li>
                 <li><a href="/About.html">About</a></li>
                 <li><a href="/blog.html">Blog</a></li>
@@ -59,7 +59,7 @@
               <i class="icon fa-solid fa-cart-shopping"></i>
               <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
                 <ul class="toggle-nav d-none">
-                  <li><a href="/cart.html">Home</a></li>
+                  <li><a href="/wishlist.html">Home</a></li>
                   <li><a href="/">Shop</a></li>
                   <li><a href="/About.html">About</a></li>
                   <li><a href="/blog.html">Blog</a></li>
