checkout page design complete

--- a/checkout.html
+++ b/checkout.html
@@ -96,8 +96,90 @@
     --------checkout  end---------->
     <section class="checkout-section">
       <div class="container">
-        <div class="row flex-row-reverse">
-          <div class="col-12 col-md-6 col-lg-4">cart summery</div>
+        <div class="row flex-row-reverse align-items-start">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="summery-container">
+              <div><h1 class="checkout-heading mb-3">Cart Summery</h1></div>
+              <div class="summery-item-box">
+                <div
+                  class="summery-item d-flex align-items-center justify-content-between"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="checkout-cart-img">
+                      <img
+                        class="img-fluid"
+                        src="/images/product-12.webp"
+                        alt="cart"
+                      />
+                    </div>
+                    <div class="checkout-text-box">
+                      <p class="">Name: Base Ball</p>
+                      <p class="">Brand: Asus</p>
+                    </div>
+                  </div>
+                  <p class="price">price: $230</p>
+                </div>
+                <div
+                  class="summery-item d-flex align-items-center justify-content-between"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="checkout-cart-img">
+                      <img
+                        class="img-fluid"
+                        src="/images/product-19.webp"
+                        alt="cart"
+                      />
+                    </div>
+                    <div class="checkout-text-box">
+                      <p class="">Name: Base Ball</p>
+                      <p class="">Brand: Asus</p>
+                    </div>
+                  </div>
+                  <p class="price">price: $230</p>
+                </div>
+                <div
+                  class="summery-item d-flex align-items-center justify-content-between"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="checkout-cart-img">
+                      <img
+                        class="img-fluid"
+                        src="/images/product-32.webp"
+                        alt="cart"
+                      />
+                    </div>
+                    <div class="checkout-text-box">
+                      <p class="">Name: Base Ball</p>
+                      <p class="">Brand: Asus</p>
+                    </div>
+                  </div>
+                  <p class="price">price: $230</p>
+                </div>
+                <div
+                  class="summery-item d-flex align-items-center justify-content-between"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="checkout-cart-img">
+                      <img
+                        class="img-fluid"
+                        src="/images/product-18.webp"
+                        alt="cart"
+                      />
+                    </div>
+                    <div class="checkout-text-box">
+                      <p class="">Name: Base Ball</p>
+                      <p class="">Brand: Asus</p>
+                    </div>
+                  </div>
+                  <p class="price">price: $230</p>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <h3>Total: </h3>
+                    <h3>$580</h3>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-12 col-md-6 col-lg-8">
             <div class="checkout-from-container">
               <div>
