--- a/product-details.html
+++ b/product-details.html
@@ -97,21 +97,21 @@
     <section class="product-details-section">
       <div class="container">
         <div class="row align-items-start">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-lg-6">
             <div class="d-flex ">
               <div>
                 <div class="d-flex-colum side-img-box"> 
-                  <img src="/images/small-product-1.webp" alt="">
-                  <img src="/images/small-product-2.webp" alt="">
-                  <img src="/images/small-product-3.webp" alt="">
-                  <img src="/images/small-product-4.webp" alt="">
+                  <img class="me-md-1" src="/images/small-product-1.webp" alt="">
+                  <img class="me-md-1" src="/images/small-product-2.webp" alt="">
+                  <img class="me-md-1" src="/images/small-product-3.webp" alt="">
+                  <img class="me-md-1" src="/images/small-product-4.webp" alt="">
                 </div>
               </div>
               <div class="details-big-image"><img class="ms-2 " src="/images/product-details-1.webp" alt=""> </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
-            <div class="detail-info">
+          <div class="col-12 col-lg-6">
+            <div class="detail-info mt-md-3">
               <h1 class="detail-heading">Black Clock</h1>
               <div class="detail-rating-box">
                 <i class="fa-solid fa-star"></i>
@@ -123,21 +123,21 @@
               <div >
                 <p class="details-info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sed sit, corrupti pariatur voluptatum nam porro veniam aliquam illum iusto vero sunt, fugiat qui quasi necessitatibus autem laudantium. Doloremque, nesciunt quidem placeat delectus expedita fuga dolores rerum enim similique dolorum!</p>
               </div>
-              <div class="d-flex details-price">
+              <div class="d-flex align-items-center details-price">
                 <p class="old-price">$15.50</p>
                 <p class="new-price">$10.00</p>
               </div>
               <div>
-                <h4>Choose Your Color</h4>
+                <h4 class="color-choose-heading">Choose Your Color</h4>
                 <ul class="details-color-list">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li class="black"></li>
+                  <li class="red"></li>
+                  <li class="green"></li>
+                  <li class="yellow"></li>
                 </ul>
               </div>
               <div>
-                <h4>Size</h4>
+                <h4 class="size-heading">Size</h4>
                 <ul class="details-size-list">
                   <li>M</li>
                   <li>L</li>
@@ -148,7 +148,7 @@
               <div class="details-quantity">
                 <p>Quantity: <i class="fa-solid fa-minus"></i> <input type="text" value="2" autocomplete="off"><i class="fa-solid fa-plus"></i> </p>
               </div>
-              <div>
+              <div class="details-btn">
                 <button>Add To Cart</button>
                 <i class="fa-regular fa-heart"></i>
               </div>
