--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="login-register.css">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="common.css" />
     <!-- Google Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,8 +34,7 @@
   </head>
   <body>
     <!------------------------------
-    --------Hero area start-------->
-    <section>
+    -------header area start------->
       <header>
         <nav>
           <div class="row justify-content-between align-items-center">
@@ -44,7 +43,7 @@
             </div>
             <div class="col-lg-6 d-none d-lg-block">
               <ul class="nav-link">
-                <li><a href="/product-details.html">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/">Shop</a></li>
                 <li><a href="/About.html">About</a></li>
                 <li><a href="/blog.html">Blog</a></li>
@@ -55,11 +54,17 @@
               class="col-8 col-lg-3 d-flex justify-content-end align-items-center flex-wrap nav_icon_box"
             >
               <i class="icon fa-solid fa-magnifying-glass"></i>
-              <i class="icon fa-solid fa-user"></i>
+              <i class="icon fa-solid fa-user">
+                <ul>
+                  <li><a href="">Login</a></li>
+                  <li><a href="">Login</a></li>
+                </ul>
+              </i>
               <i class="icon fa-solid fa-cart-shopping"></i>
               <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
+                <!-- nav menu for mobile device -->
                 <ul class="toggle-nav d-none">
-                  <li><a href="/product-details.html">Home</a></li>
+                  <li><a href="/">Home</a></li>
                   <li><a href="/">Shop</a></li>
                   <li><a href="/About.html">About</a></li>
                   <li><a href="/blog.html">Blog</a></li>
@@ -70,7 +75,12 @@
           </div>
         </nav>
       </header>
+    <!------------------------------
+    -------header area end--------->
 
+    <!------------------------------
+    --------Hero area start-------->
+    <section class="Hero-section">
       <!-- slider area -->
       <div class="slide">
         <!-- for mobile -->
@@ -143,41 +153,6 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-
-        <!-- for ipad , laptop, desktop -->
-        <!-- <div
-          id="carouselExampleAutoplaying"
-          class="d-none d-md-block carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="slider-1 carousel-item active"></div>
-            <div class="slider-2 carousel-item"></div>
-            <div class="slider-3 carousel-item"></div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev"
-          >
-            <span aria-hidden="true">
-              <i class="fa-solid fa-chevron-left"></i>
-            </span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next"
-          >
-            <span aria-hidden="true">
-              <i class="fa-solid fa-chevron-right"></i>
-            </span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div> -->
       </div>
     </section>
     <!------------------------------
@@ -234,7 +209,7 @@
               </a>
             </div>
             <div class="md-content">
-              <h6>40% Off</h6>
+              <h6>25% Off</h6>
               <h3>New Furniture</h3>
               <a href="/">Shop Now</a>
             </div>
@@ -250,8 +225,8 @@
               </a>
             </div>
             <div class="md-content">
-              <h6>40% Off</h6>
-              <h3>New Furniture</h3>
+              <h6>10% Off</h6>
+              <h3>Gadgets</h3>
               <a href="/">Shop Now</a>
             </div>
           </div>
@@ -267,7 +242,7 @@
             </div>
             <div class="md-content">
               <h6>40% Off</h6>
-              <h3>New Furniture</h3>
+              <h3>Home & Lifestyle</h3>
               <a href="/">Shop Now</a>
             </div>
           </div>
@@ -623,14 +598,15 @@
             <h1>Newsletter</h1>
             <div class="subscribe">
               <input type="text" />
-             <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
           <div class="f-box-3 col-md-6 col-lg-3">
             <h1>Contact Us</h1>
             <span
               >319 Clematis St. <br />
-              Suite 100 WPB, FL 33401</span>
+              Suite 100 WPB, FL 33401</span
+            >
           </div>
           <div class="f-box-3 col-md-6 col-lg-3">
             <h1>Follow</h1>
@@ -642,15 +618,20 @@
             </div>
           </div>
         </div>
-        <hr>
-        <div class=" row">
+        <hr />
+        <div class="row">
           <div class="cpoyright col-12 col-md-6">
-            <p>© 2023 Uniqlo. Made with by <a href="https://tanvir-s-portfolio.netlify.app/" target="_blank">Developer Tanvir.</a></p>
+            <p>
+              © 2023 Uniqlo. Made with by
+              <a href="https://tanvir-s-portfolio.netlify.app/" target="_blank"
+                >Developer Tanvir.</a
+              >
+            </p>
           </div>
           <div class="footer-link col-12 col-md-6">
-              <a href="/">Home</a>
-              <a href="/">Product</a>
-              <a href="/">Contact </a>
+            <a href="/">Home</a>
+            <a href="/">Product</a>
+            <a href="/">Contact </a>
           </div>
         </div>
       </div>
