--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="contact.css" />
     <!-- Google Font Poppins -->
